# gg_kino

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README Diploma Project.md  README.md  add_new_field_to_documents_movies.py  docker-compose-async-tests.yml  docker-compose-auth-tests.yml  docker-compose-auth.yml  docker-compose-metrics.yml  docker-compose-tests.yml  docker-compose.debug.yml  docker-compose.tests.yml  docker-compose.yml  output.txt  pyproject.toml  requirements.txt  tests_vars.txt  tree.txt
libs/auth_utils/: MANIFEST.in  README.md  pyproject.toml
libs/auth_utils/auth_utils/: __init__.py  auth_decorators.py  auth_utils_config.py  check_auth.py
libs/tracer/: pyproject.toml
services/admin-panel/src/: Dockerfile  Dockerfile.debug  README.md  err.txt  pyproject.toml
services/admin-panel/src/accounts/: auth.py  models.py  urls.py  utils.py  views.py
services/admin-panel/src/config/: settings.py  urls.py
services/admin-panel/src/scripts/: entrypoint.sh  entrypoint_debug.sh
services/async-api/src/: Dockerfile  README.md  docker-compose-tests.yml  docker-compose.debug.yml  docker-compose.yml  main.py  prepare_data_for_checking.py  pyproject.toml
services/async-api/src/core/: config.py  logger_config.py
services/async-api/src/db/: cache.py  database.py  elastic.py
services/async-api/src/docs/: docs.md  endpoints.md  es_dump.md
services/async-api/src/models/: schemas_logic.py
services/async-api/src/scripts/: prepare_data_for_checking.py
services/async-api/src/services/: filmwork.py  genres.py  person.py
services/async-api/src/suppliers/: rec_profile.py
services/async-api/src/utils/: connectors.py  decorators.py  exceptions_handlers.py  http_decorators.py
services/async-api/tests/functional/: Dockerfile  Dockerfile-tests  conftest.py  pyproject.toml  start-tests.sh
services/auth-service/src/: Dockerfile  Dockerfile.debug  main.py  manage.py  pyproject.toml
services/auth-service/src/adapter/: notification_adapter.py
services/auth-service/src/commands/: common-passwords.txt  createsuperuser.py
services/auth-service/src/core/: config.py  gunicorn_conf.py  logger_config.py  oauth_conf.py
services/auth-service/src/db/: cache.py  postgres.py
services/auth-service/src/dumps/: dumps-doc.md
services/auth-service/src/middleware/: request_context.py
services/auth-service/src/migration/: env.py
services/auth-service/src/models/: logic_models.py  models.py  models_types.py
services/auth-service/src/schemas/: entity.py
services/auth-service/src/scripts/: create_superuser.sh  entrypoint_debug.sh
services/auth-service/src/services/: auth_repository.py  auth_service.py  base_service.py  profile_repository.py  profile_service.py  role.py  role_repository.py  role_service.py  session_maker.py  user_service.py
services/auth-service/src/utils/: connectors.py  decorators.py  http_decorators.py  key_manager.py  middlewares.py  rate_limit.py  state_manager.py  tracer.py
services/auth-service/tests/functional/: Dockerfile  conftest.py  pyproject.toml  start-test.sh  start-tests.sh
services/email-sender/src/: Dockerfile  alembic.ini  dump_templates.py  main.py  pyproject.toml
services/email-sender/src/core/: config.py  template_config.py
services/email-sender/src/db/: cache.py  postgres.py
services/email-sender/src/migrations/: env.py
services/email-sender/src/models/: enums.py  logic_models.py  models.py  schemas.py
services/email-sender/src/scripts/: run_email_sender.sh
services/email-sender/src/services/: sender_service.py  template_repository.py
services/email-sender/src/storage/: messagebroker.py
services/email-sender/src/utils/: connectors.py  decorators.py
services/embedding-etl/src/: Dockerfile  Dockerfile.debug  connectors.py  extract.py  http_process.py  load.py  main.py  mvp_core.py  output.json  output2.json  pyproject.toml  run_etl.py  transform.py  tree.txt
services/embedding-etl/src/core/: config.py  logger_config.py
services/embedding-etl/src/db/: cache.py  elastic.py
services/embedding-etl/src/models/: models_logic.py
services/embedding-etl/src/pipeline/: extract.py  load.py  transform.py
services/embedding-etl/src/scripts/: run_celery_debug.sh
services/embedding-etl/src/services/: http_client.py  mvp.py
services/embedding-etl/src/tasks/: celery_config.py  scheduled.py
services/embedding-etl/src/utils/: decorators.py  examination.py  kafka_connector.py  schemas.py
services/embedding-service/src/: Dockerfile  main.py  pyproject.toml
services/embedding-service/src/core/: config.py  logger_conf.py
services/embedding-service/src/services/: ai_model.py  embedding_service.py
services/embedding-service/src/utils/: lifespan.py
services/metric-service/etl/: Dockerfile  config.py  examination.py  extract.py  kafka_connector.py  load.py  main.py  pyproject.toml  schemas.py  transform.py
services/metric-service/etl/core/: config.py  logger_config.py
services/metric-service/etl/pipeline/: extract.py  load.py  transform.py
services/metric-service/etl/utils/: decorators.py  examination.py  kafka_connector.py  schemas.py
services/metric-service/metric-api/src/: Dockerfile  app.py  pyproject.toml  wsgi_app.py
services/metric-service/tests/functional/: Dockerfile  conftest.py  pyproject.toml  start-test.sh
services/recs-profile/src/: Dockerfile  main.py  pyproject.toml
services/recs-profile/src/core/: config.py  logger_config.py
services/recs-profile/src/migration/: env.py
services/recs-profile/src/models/: enums.py  logic_models.py  models.py
services/recs-profile/src/services/: base_service.py  event_processor.py  recs_service.py
services/recs-profile/src/suppliers/: base_supplier.py  embedding_supplier.py  film_supplier.py
services/recs-profile/src/utils/: aiokafka_conn.py  connectors.py  exceptions_handlers.py  http_decorators.py
services/recs-profile/tests/: Dockerfile  conftest.py  pyproject.toml
services/recs-profile/tests/functional/: start-tests.sh
services/ws_notification-service/src/: Dockerfile  main.py  pyproject.toml
(+448 files in other folders)
