[project]
name = "monorepo-tools"
version = "0.1.0"
description = "Common development tools"
requires-python = ">=3.12,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
isort = "^6.0.0"
black = "^25.1.0"
flake8 = "^7.1.2"
flake8-pyproject = "^1.2.3"
debugpy = "^1.8.13"
ipython = "^9.1.0"


[tool.poetry.dependencies]
elasticsearch = {extras = ["async"], version = "^8.13.2"}
backoff = "^2.2.1"
auth-utils = {path = "libs/auth_utils"}
[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | migrations
    | migration
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "migration",
    "migrations",
    "services/auth-service/src/migration",
    "services/auth-service/src/migrations"
]
