[project]
name = "monorepo-tools"
version = "0.1.0"
description = "Common development tools"
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
elasticsearch = { extras = ["async"], version = ">=8.13.2,<9.0.0" }
backoff = "2.2.1"
flask = ">=3.1.1,<4.0.0"
rate-limite-utils = { path = "libs/rate_limite_utils" }
auth-utils = { path = "libs/auth_utils" }
tracer = { path = "libs/tracer_utils" }
apiflask = "^2.4.0"
kafka-python = "^2.2.10"
pyjwt = ">=2.9.0,<2.10.0"
flask-limiter = "^3.12"
wemake-python-styleguide = "^1.1.0"
mypy = "1.16.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.1.0,<5.0.0"
isort = ">=6.0.0,<7.0.0"
black = ">=25.1.0,<26.0.0"
flake8 = ">=7.1.2,<8.0.0"
debugpy = ">=1.8.13,<2.0.0"
ipython = ">=9.1.0,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | migrations
    | migration
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "migration",
    "migrations",
    "services/auth-service/src/migration",
    "services/auth-service/src/migrations"
]
