[project]
name = "admin-panel"
version = "0.1.0"
description = "admin panel service"
requires-python = ">=3.12,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
asyncpg = "^0.30.0"
python-dotenv = "^1.1.0"
python = "^3.12"
redis = "^5.0.4"
pydantic-settings = "^2.8.1"
django = "5.1"
gunicorn = "^23.0.0"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
