[tool.poetry]
name = "async-api"
version = "0.1.0"
description = "Async API Service"
packages = [{include = "async_api"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.11"}
elasticsearch = {extras = ["async"], version = "^8.13.2"}
redis = "^5.0.4"
pydantic-settings = "^2.8.1"
gunicorn = "^23.0.0"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.26.0"
aiohttp = "^3.11.16"
testcontainers = "^4.5.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
