[project]
name = "async-api"
version = "0.1.0"
description = "async api service"
requires-python = ">=3.12,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.11"}
elasticsearch = {extras = ["async"], version = "^8.13.2"}
redis = "^5.0.4"
pydantic-settings = "^2.8.1"
gunicorn = "^23.0.0"
async-fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.6.6"}


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
