[project]
name = "embedding-service"
version = "0.1.0"
authors = [
    {name = "Maksim Ushakov",email = "jw999coding@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (==0.115.12)",
    "uvicorn (==0.34.1)",
    "gunicorn (==23.0.0)",
    "pydantic-settings (==2.9.1)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "sentence-transformers[onnx] (==5.0.0)",
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "pytorch_cpu"}
torchvision = {source = "pytorch_cpu"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
