[project]
name = "auth-api-tests"
version = "0.1.0"
description = "Functional tests from auth-api"
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pytest = "8.3.4"
aiohttp = "3.11.16"
pytest-asyncio = "0.26.0"
python-dotenv = "1.1.0"
redis = "5.0.4"
asyncpg = "0.30.0"
psycopg = "^3.0"
pydantic = "2.11.3"
pydantic-settings = "2.9.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--asyncio-mode=auto -W ignore::DeprecationWarning"
