[project]
name = "metric-service"
version = "0.1.0"
description = "Authentication microservice"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask >=3.1.1,<4.0.0",
    "packaging (>=25.0,<26.0)",
    "kafka-python (>=2.2.10,<3.0.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "gevent (>=25.5.1,<26.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "apiflask (>=2.4.0,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
